# backlight-gui

./: Makefile.am  NOTICE  README.md  autogen.sh  configure.ac
debian/: changelog  control  copyright  rules
icons/: Makefile.am
po/: POTFILES.in  backlight-gui.pot  ja.po
src/: Makefile.am  application.py  backlight-gui.desktop  backlight-gui.in.in  backlight.py  main.py  package.py.in.in  window.py
