# Copyright (c) 2020 Esrille Inc.
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, see <http://www.gnu.org/licenses/>.

dist_hicolor_icon_48_DATA = backlight-gui.png
hicolor_icon_48dir = $(datadir)/icons/hicolor/48x48/apps

dist_hicolor_icon_scalable_DATA = backlight-gui.svg
hicolor_icon_scalabledir = $(datadir)/icons/hicolor/scalable/apps
